--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Luton Ceramic Pvt. Ltd. - Digital Parking Tiles Manufacturer & Exporter</title>
+    <title>Luton Ceramic Pvt. Ltd.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
